Insights page z-index fix. Null dropdown selectQuery fix

--- a/app/src/components/SmoothDropdown/SmoothDropdown.css
+++ b/app/src/components/SmoothDropdown/SmoothDropdown.css
@@ -4,6 +4,7 @@
 
 .dd {
   position: absolute;
+  z-index: 2;
   width: 100%;
   left: 0;
   top: calc(100% + 6px);
